# mobi-rs

./: Cargo.toml  LICENSE
crates/byyte/: Cargo.toml  README.md
crates/byyte/src/: be.rs  le.rs  lib.rs
crates/manga2kindle/: Cargo.toml
crates/manga2kindle/src/: main.rs
crates/mobi/: Cargo.toml
crates/mobi/examples/: read.rs  write.rs
crates/mobi/src/: compression.rs  exth_header.rs  lib.rs  mobi.rs  mobi_header.rs  mobi_writer.rs  palmdoc_header.rs
crates/palm_database/: Cargo.toml
crates/palm_database/src/: builder.rs  lib.rs  timestamp.rs
src/: mobi.rs  palmdoc.rs  pdb.rs  timestamp.rs
