[package]
name = "manga2kindle"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25", features = ["jpeg", "png"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde_json = "1.0.143"
serde = "1.0.219"
iced = { version = "0.13.1", features = ["tokio", "image", "svg"] }
iced_aw = { version = "0.12.2" }
tokio = "1.47.1"
